2005-10-11  Adele Peterson  <adele@apple.com>

        Rolling out fix for http://bugzilla.opendarwin.org/show_bug.cgi?id=5195
        since it caused:

        REGRESSION text areas draw focus ring around each glyph, no caret in text fields
        http://bugzilla.opendarwin.org/show_bug.cgi?id=5335

        * WebView.subproj/WebHTMLView.m:
        (-[WebHTMLView _propagateDirtyRectsToOpaqueAncestors]):
        (-[WebHTMLView _recursiveDisplayRectIfNeededIgnoringOpacity:isVisibleRect:rectIsVisibleRectForView:topView:]):
        (-[WebHTMLView _recursiveDisplayAllDirtyWithLockFocus:visRect:]):

2005-10-09  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

        - fixed http://bugzilla.opendarwin.org/show_bug.cgi?id=5195
          Would like API to flush rendering of pending DOM changes

        This was actually a Tiger regression. When AppKit added a new code path for rendering
        NSView, our special hack for doing layout when we draw didn't work any more. So we
        were able to fix this without adding any API.

        * WebView.subproj/WebHTMLView.m:
        (-[WebHTMLView _recursiveDisplayRectIgnoringOpacity:inContext:topView:]): Added.
        Does the same thing that other _recursiveDisplay methods do.

2005-10-08  Alexey Proskuryakov  <ap@nypop.com>

        Reviewed by Maciej.

        - fixed http://bugzilla.opendarwin.org/show_bug.cgi?id=5187
          UTF-8 in long text files breaks at some point

        * WebView.subproj/WebTextRepresentation.m:
        (-[WebTextRepresentation finishedLoadingWithDataSource:]):
        Call flushReceivedData on the WebTextView so it can decode any final bytes.

        * WebView.subproj/WebTextView.h: Added WebCoreTextDecoder field and flushReceivedData method.
        * WebView.subproj/WebTextView.m:
        (-[WebTextView dealloc]): Release WebCoreTextDecoder.
        (-[WebTextView appendReceivedData:fromDataSource:]): Create a WebCoreTextDecoder to decode